crates/rattler_conda_types/src/match_spec/snapshots/rattler_conda_types__match_spec__condition__tests__complex_and_with_parens.snap
---
source: crates/rattler_conda_types/src/match_spec/condition.rs
expression: result
---
And:
  - MatchSpec: foobar
  - Or:
      - MatchSpec: bizbaz
      - MatchSpec: blabla
