crates/rattler_conda_types/src/match_spec/snapshots/rattler_conda_types__match_spec__condition__tests__precedence_test.snap
---
source: crates/rattler_conda_types/src/match_spec/condition.rs
expression: result
---
Or:
  - And:
      - MatchSpec:
          name: a
      - MatchSpec:
          name: b
  - And:
      - MatchSpec:
          name: c
      - MatchSpec:
          name: d
