crates/rattler_conda_types/src/match_spec/snapshots/rattler_conda_types__match_spec__condition__tests__simple_or.snap
---
source: crates/rattler_conda_types/src/match_spec/condition.rs
expression: result
---
Or:
  - MatchSpec: foobar
  - MatchSpec: bizbaz
